
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct stream_encoder {int dummy; } ;
struct dcn10_stream_encoder {int dummy; } ;


 struct dcn10_stream_encoder* DCN10STRENC_FROM_STRENC (struct stream_encoder*) ;
 int HDMI_GENERIC0_CONT ;
 int HDMI_GENERIC0_LINE ;
 int HDMI_GENERIC0_SEND ;
 int HDMI_GENERIC1_CONT ;
 int HDMI_GENERIC1_LINE ;
 int HDMI_GENERIC1_SEND ;
 int HDMI_GENERIC2_CONT ;
 int HDMI_GENERIC2_LINE ;
 int HDMI_GENERIC2_SEND ;
 int HDMI_GENERIC3_CONT ;
 int HDMI_GENERIC3_LINE ;
 int HDMI_GENERIC3_SEND ;
 int HDMI_GENERIC4_CONT ;
 int HDMI_GENERIC4_LINE ;
 int HDMI_GENERIC4_SEND ;
 int HDMI_GENERIC5_CONT ;
 int HDMI_GENERIC5_LINE ;
 int HDMI_GENERIC5_SEND ;
 int HDMI_GENERIC6_CONT ;
 int HDMI_GENERIC6_LINE ;
 int HDMI_GENERIC6_SEND ;
 int HDMI_GENERIC7_CONT ;
 int HDMI_GENERIC7_LINE ;
 int HDMI_GENERIC7_SEND ;
 int HDMI_GENERIC_PACKET_CONTROL0 ;
 int HDMI_GENERIC_PACKET_CONTROL1 ;
 int HDMI_GENERIC_PACKET_CONTROL2 ;
 int HDMI_GENERIC_PACKET_CONTROL3 ;
 int HDMI_GENERIC_PACKET_CONTROL4 ;
 int REG_SET_2 (int ,int ,int ,int ,int ,int ) ;
 int REG_SET_4 (int ,int ,int ,int ,int ,int ,int ,int ,int ,int ) ;

__attribute__((used)) static void enc2_stream_encoder_stop_hdmi_info_packets(
 struct stream_encoder *enc)
{
 struct dcn10_stream_encoder *enc1 = DCN10STRENC_FROM_STRENC(enc);


 REG_SET_4(HDMI_GENERIC_PACKET_CONTROL0, 0,
  HDMI_GENERIC0_CONT, 0,
  HDMI_GENERIC0_SEND, 0,
  HDMI_GENERIC1_CONT, 0,
  HDMI_GENERIC1_SEND, 0);
 REG_SET_2(HDMI_GENERIC_PACKET_CONTROL1, 0,
  HDMI_GENERIC0_LINE, 0,
  HDMI_GENERIC1_LINE, 0);


 REG_SET_4(HDMI_GENERIC_PACKET_CONTROL0, 0,
  HDMI_GENERIC2_CONT, 0,
  HDMI_GENERIC2_SEND, 0,
  HDMI_GENERIC3_CONT, 0,
  HDMI_GENERIC3_SEND, 0);
 REG_SET_2(HDMI_GENERIC_PACKET_CONTROL2, 0,
  HDMI_GENERIC2_LINE, 0,
  HDMI_GENERIC3_LINE, 0);


 REG_SET_4(HDMI_GENERIC_PACKET_CONTROL0, 0,
  HDMI_GENERIC4_CONT, 0,
  HDMI_GENERIC4_SEND, 0,
  HDMI_GENERIC5_CONT, 0,
  HDMI_GENERIC5_SEND, 0);
 REG_SET_2(HDMI_GENERIC_PACKET_CONTROL3, 0,
  HDMI_GENERIC4_LINE, 0,
  HDMI_GENERIC5_LINE, 0);


 REG_SET_4(HDMI_GENERIC_PACKET_CONTROL0, 0,
  HDMI_GENERIC6_CONT, 0,
  HDMI_GENERIC6_SEND, 0,
  HDMI_GENERIC7_CONT, 0,
  HDMI_GENERIC7_SEND, 0);
 REG_SET_2(HDMI_GENERIC_PACKET_CONTROL4, 0,
  HDMI_GENERIC6_LINE, 0,
  HDMI_GENERIC7_LINE, 0);
}
